Status improvements: refactoring and aligning events with failure conditions